bk_ida/gobmkida/c3/owl_confirm_safety
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4348:12: error: expected expression
*( _OWORD *)( v13 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4348:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4348:44: error: expected expression
*( _OWORD *)( v13 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4348:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4349:12: error: expected expression
*( _OWORD *)( v13 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4349:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4349:44: error: expected expression
*( _OWORD *)( v13 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4349:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4350:12: error: expected expression
*( _OWORD *)( v13 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4350:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4350:44: error: expected expression
*( _OWORD *)( v13 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4350:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v13 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4351:12: error: expected expression
*( _OWORD *)&dragon_goal_worms[v13 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4351:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v13 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4351:60: error: expected expression
*( _OWORD *)&dragon_goal_worms[v13 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/engine/owl.c:4351:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v13 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                   ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_confirm_safety/src/obj/1/owl.o] Error 1
